# spot_ros

./: .gitmodules  LICENSE  README.md  requirements.txt  setup.sh
my_grasping/: CMakeLists.txt  package.xml
my_grasping/msg/: PixelPose.msg
my_grasping/src/: image_box.py
spot_cam/: CHANGELOG.rst  CMakeLists.txt  LICENSE  package.xml  setup.py
spot_cam/action/: CaptureImage.action  CaptureImageHighQuality.action  LookAtPoint.action
spot_cam/launch/: spot_cam.launch
spot_cam/msg/: BITStatus.msg  Degradation.msg  PTZDescription.msg  PTZDescriptionArray.msg  PTZLimits.msg  PTZState.msg  PTZStateArray.msg  PowerStatus.msg  StreamParams.msg  StringMultiArray.msg  Temperature.msg  TemperatureArray.msg
spot_cam/scripts/: spot_cam
spot_cam/src/spot_cam/: spot_cam_ros.py  spot_cam_wrapper.py  webrtc_client.py
spot_cam/srv/: CaptureImage.srv  LoadSound.srv  LookAtPoint.srv  PlaySound.srv  SetBool.srv  SetFloat.srv  SetIRColormap.srv  SetIRMeterOverlay.srv  SetPTZState.srv  SetStreamParams.srv  SetString.srv
spot_champ_config/: CMakeLists.txt  README.md  config.json  package.xml
spot_champ_config/config/gait/: gait.yaml
spot_champ_config/config/links/: links.yaml
spot_champ_config/config/move_base/: base_local_planner_holonomic_params.yaml
spot_champ_config/config/ros_control/: ros_control.yaml
spot_champ_config/include/: gait_config.h  hardware_config.h  quadruped_description.h
spot_champ_config/launch/: bringup.launch  gazebo.launch  navigate.launch  slam.launch  spawn_robot.launch
spot_champ_config/launch/include/: move_base.launch
spot_description/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
spot_description/launch/: description.launch  description.launch.py  description.py
spot_description/meshes/: front_left_hip.dae  front_left_lower_leg.dae  front_left_upper_leg.dae  front_right_hip.dae  front_right_lower_leg.dae  front_right_upper_leg.dae  lidar_mount.dae  pack_body.dae  pack_top.dae  rear_left_hip.dae  rear_left_lower_leg.dae  rear_left_upper_leg.dae  rear_right_hip.dae  rear_right_lower_leg.dae  rear_right_upper_leg.dae  spot.mtl  velo.dae
spot_description/rviz/: standalone_arm.rviz  viz_spot.rviz
spot_description/urdf/: accessories.urdf.xacro  constants.urdf.xacro  empty.urdf  spot.urdf.xacro  spot_arm.xacro  spot_arm_macro.urdf  spot_feet_macro.urdf  spot_leg.urdf.xacro  spot_macro.xacro  standalone_arm.urdf.xacro
spot_driver/: CHANGELOG.rst  CMakeLists.txt  LICENSE  debug.txt  package.xml  rosdoc.yaml  setup.cfg  setup.py
spot_driver/config/: hachi_ros.yaml  planar.yaml  spot_ros.yaml  teleop.yaml  twist_mux.yaml
spot_driver/doc/: conf.py  index.rst  ros_helpers.rst  spot_ros.rst  spot_wrapper.rst
spot_driver/launch/: accessories.launch  control.launch  driver.launch  hachi.launch
spot_driver/scripts/: __init__.py  ros_helpers.py  spot_ros  spot_ros.py  spot_wrapper.py  world_object_wrapper_test
spot_driver/scripts/examples/: hand_pose_example  highlevel_command_wrapper_test  local_grid_example.py  mapping_example.py  recording_example.py  task_wrapper_example  world_object_wrapper_test
spot_driver/spot_driver/: ros_helpers.py  spot_driver.py  spot_ros.py  spot_wrapper.py
spot_driver/src/spot_driver/: graph_nav_util.py  highlevel_command_wrapper.py  local_grid_example.py  ros_helpers.py  (+13 more)
spot_driver/test/: graph_nav_util_test.py  mock_spot_ros.py  ros_helpers_test.py  run_tests.py  run_tests.test  spot_ros_test.py
spot_driver_interfaces/: CMakeLists.txt  package.xml
spot_driver_interfaces/msg/: BatteryState.msg  BehaviorFault.msg  BehaviorFaultState.msg  EStopStateArray.msg  FramePose.msg  LeaseArray.msg  LeaseResource.msg  Metrics.msg  SystemFault.msg  WiFiState.msg
spot_driver_interfaces/srv/: CreateFrame.srv  SetOrientation.srv  SetParameter.srv  StrikeAPose.srv  Turn.srv  Walk.srv  WalkTo.srv  WalkToInFrame.srv  WalkToRelative.srv
spot_interactive_marker_server/: CMakeLists.txt  package.xml
spot_interactive_marker_server/config/: config.yaml
spot_interactive_marker_server/scripts/: spot_interactive_marker_server.py
spot_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
spot_msgs/action/: Dock.action  Gripper.action  NavigateInit.action  NavigateRoute.action  NavigateTo.action  PoseBody.action  Trajectory.action
spot_msgs/msg/: AllowableOrientation.msg  AprilTagProperties.msg  BatteryState.msg  BatteryStateArray.msg  BehaviorFault.msg  BehaviorFaultState.msg  DockState.msg  EStopState.msg  EStopStateArray.msg  Feedback.msg  FootState.msg  FootStateArray.msg  FrameTreeSnapshot.msg  GraspParams.msg  ImageCapture.msg  ImageProperties.msg  ImageSource.msg  JointTarget.msg  Lease.msg  LeaseArray.msg  LeaseOwner.msg  LeaseResource.msg  Metrics.msg  MobilityParams.msg  ObstacleParams.msg  ParentEdge.msg  PowerState.msg  SpotCheckDepth.msg  SpotCheckHipROM.msg  SpotCheckKinematic.msg  SpotCheckLoadCell.msg  SpotCheckPayload.msg  SystemFault.msg  SystemFaultState.msg  TerrainParams.msg  TerrainState.msg  WiFiState.msg  WorldObject.msg  WorldObjectArray.msg
spot_msgs/srv/: ArmForceTrajectory.srv  ArmJointMovement.srv  ArmJointTrajectory.srv  ClearBehaviorFault.srv  ConstrainedArmJointMovement.srv  Dock.srv  DownloadGraph.srv  GetDockState.srv  GraphCloseLoops.srv  Grasp3d.srv  GripperAngleMove.srv  HandPose.srv  ListGraph.srv  NavigateInit.srv  PosedStand.srv  SetLocalizationFiducial.srv  SetLocalizationWaypoint.srv  SetLocomotion.srv  SetObstacleParams.srv  SetSwingHeight.srv  SetTerrainParams.srv  SetVelocity.srv  SpotCheck.srv  Trajectory.srv  UploadGraph.srv
spot_ros/: CMakeLists.txt  package.xml
spot_viz/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin_description.xml  setup.py
spot_viz/launch/: view_hachi.launch  view_model.launch  view_model.launch.py  view_robot.launch  view_robot.launch.py
spot_viz/meshes/: chair_arm.FCStd  chair_arm.stl
spot_viz/resource/: spot_control.ui
spot_viz/rviz/: class_demo.rviz  hachi.rviz  model.rviz  robot.rviz
spot_viz/scripts/: chair_marker
spot_viz/src/: look_at_point_tool.cpp  look_at_point_tool.h  spot_panel.cpp  spot_panel.hpp
(+150 files in other folders)
