<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spot_description</name>
  <version>0.0.0</version>
  <description>This package contains the URDF files for Spot</description>
  <maintainer email="engineering@theaiinstitute.com">AI Institute</maintainer>
  <license>MIT</license>

  <!-- Rest of file has been modified per ROS 1 Noetic version -->
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>velodyne_description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
