<?xml version='1.0'?>
<?xml-model href='http://download.ros.org/schema/package_format3.xsd' schematypens='http://www.w3.org/2001/XMLSchema'?>
<package format='3'>
    <name>spot_driver</name>
    <version>0.0.0</version>
    <description>The Spot driver supplies a ROS2 interface to the Spot SDK</description>
    <maintainer email='jeroen.fransman@tno.nl'>Jeroen Fransman</maintainer>
    <license>TODO</license>
    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>
    <exec_depend>spot_driver_interfaces</exec_depend>
    <export>
    <build_type>ament_python</build_type>
    </export>
</package>