<?xml version="1.0"?>
<package format="2">
  <name>spot_driver</name>
  <version>0.0.0</version>
  <description>The spot_driver package</description>

  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>spot_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python3-rospkg-modules</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>interactive_marker_twist_server</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
