<?xml version="1.0"?>
<package format="2">
  <name>spot_driver</name>
  <version>1.1.0</version>
  <description>The spot_driver package</description>

  <maintainer email="michal@robots.ox.ac.uk">Michal Staniaszek</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>spot_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python3-rospkg-modules</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>interactive_marker_twist_server</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>
  <exec_depend>python-transforms3d-pip</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
