<?xml version="1.0"?>
<package format="2">
  <name>spot_interactive_marker_server</name>
  <version>0.0.0</version>
  <description>The spot_interactive_marker_server package</description>

  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>interactive_markers</depend>
  <depend>rospy</depend>
  <depend>visualization_msgs</depend>
</package>
