<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spot_ros</name>
  <version>2.0.0</version>
  <description>
    Spot ROS Driver
  </description>
  <author email="austin.deric@gmail.com">Austin Deric</author>
  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>spot_description</exec_depend>
  <exec_depend>spot_driver</exec_depend>
  <exec_depend>spot_msgs</exec_depend>
  <exec_depend>spot_viz</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>