<?xml version="1.0"?>
<package format="2">
  <name>spot_viz</name>
  <version>1.1.0</version>
  <description>The spot_viz package</description>

  <maintainer email="michal@robots.ox.ac.uk">Michal Staniaszek</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>spot_msgs</build_depend>
  <build_depend>spot_cam</build_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>spot_msgs</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>